cmem-kubernetes/04_redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cmem-cache
  namespace: cmem-k8s
  labels:
    component: cmem
    role: cache
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: cmem
        role: cache
    spec:
      containers:
        - name: redis
          image: gcr.io/google_containers/redis:v1
          volumeMounts:
            - name: data
              mountPath: /redis-master-data
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          ports:
            - name: default-port
              containerPort: 6379
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "/usr/local/bin/redis-cli -h $(hostname) ping"
            initialDelaySeconds: 15
            periodSeconds: 3
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "/usr/local/bin/redis-cli -h $(hostname) ping"
            initialDelaySeconds: 5
            periodSeconds: 15
      restartPolicy: Always
      imagePullSecrets:
        - name: eccenca-registry-credentials
      volumes:
      - name: data
        emptyDir: {}
