cmem-kubernetes/05_dataintegration.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cmem-di
  namespace: cmem-k8s
  labels:
    component: cmem
    role: di
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: cmem
        role: di
    spec:
      containers:
        - name: eccenca-dataintegration
          image: docker-registry.eccenca.com/eccenca-dataintegration-k8s:v4.1.0
          ports:
            - name: default-port
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: "2Gi"
          volumeMounts:
            - name: config-volume
              mountPath: /opt/elds/dataintegration/dist/etc/dataintegration
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /dataintegration/version
              port: default-port
            initialDelaySeconds: 20
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /dataintegration/version
              port: default-port
            initialDelaySeconds: 30
            periodSeconds: 15
      restartPolicy: Always
      imagePullSecrets:
        - name: eccenca-registry-credentials
      volumes:
      # consume the file-like keys of the configmap via volume plugin
      - name: config-volume
        configMap:
          name: cmem-dataintegration-config
          items:
          - key: dataintegration.conf
            path: dataintegration.conf
      - name: deployment-volume
        configMap:
          name: cmem-deployment-config
      - name: data
        emptyDir: {}
