cmem-kubernetes/05_datamanger.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cmem-dm
  namespace: cmem-k8s
  labels:
    component: cmem
    role: dm
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: cmem
        role: dm
    spec:
      containers:
        - name: eccenca-datamanager
          image: docker-registry.eccenca.com/eccenca-datamanager-k8s:v4.1.1
          ports:
            - name: default-port
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: "512Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /login
              port: default-port
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /login
              port: default-port
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
      imagePullSecrets:
        - name: eccenca-registry-credentials
      volumes:
      # consume the file-like keys of the configmap via volume plugin
      - name: config-volume
        configMap:
          name: cmem-datamanager-config
          items:
          - key: application.yml
            path: application.yml
      - name: deployment-volume
        configMap:
          name: cmem-deployment-config
