cmem-kubernetes/05_dataplatform.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cmem-dp
  namespace: cmem-k8s
  labels:
    component: cmem
    role: dp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: cmem
        role: dp
    spec:
      containers:
        - name: eccenca-dataplatform
          image: docker-registry.eccenca.com/eccenca-dataplatform-k8s:v9.1.1
          ports:
            - name: default-port
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: "2Gi"
          volumeMounts:
            - name: config-volume
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /dataplatform/health
#              path: /health
              port: default-port
            initialDelaySeconds: 45
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /dataplatform/health
#              path: /health
              port: default-port
            initialDelaySeconds: 60
            periodSeconds: 15
      restartPolicy: Always
      imagePullSecrets:
        - name: eccenca-registry-credentials
      volumes:
      # consume the file-like keys of the configmap via volume plugin
      - name: config-volume
        configMap:
          name: cmem-dataplatform-config
          items:
          - key: application.yml
            path: application.yml
          - key: accessConditions.ttl
            path: accessConditions.ttl
      - name: data
        emptyDir: {}
